Fix layout issues in index.html and stylesheet.css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,7 +139,7 @@ button:hover {
     max-width: 1200px;
     height: 700px;
     z-index: -2;
-    margin: 0px auto -200px auto;
+    margin: 0px auto;
     top: 300px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -154,7 +154,6 @@ button:hover {
     width: 100%;
     height: auto;
     max-height: 80%;
-    max-width: 100%;
     margin: 0 auto;
     z-index: -1;
     mask-image: linear-gradient(to bottom, black 100%, transparent 60%);
@@ -163,7 +162,7 @@ button:hover {
 #firstblock {
     position: flex;
     position: relative;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 1);  
     color:white;
 }
 #documentary-thumbnail {
@@ -230,6 +229,7 @@ button:hover {
         mask-image: linear-gradient(to top, black 90%, transparent 100%);
         top: -200px;
         height: 600px;
+        margin: 0px auto -200px auto;
     }
     #firstblock {
         border-radius: 0px;
